# etiquetas_pesos

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.txt  README_GITHUB.md  SECURITY.md  actualizador_pesos.py  app_etiquetado_pesos.py  crear_instalador_completo.bat  editor_etiquetas.py  ejecutar_etiquetado_pesos.bat  estilos_suite.py  instalador_etiquetado_pesos.iss  instalador_pesos.py  lanzador_pesos.py  logica_etiquetas.py  pyproject.toml  requirements.txt  update_config.json  version.json
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
config/: articulos.txt  config_salazon.csv  plantilla_etiqueta_pesos.json
docs/: BUILD.md  CODE_SIGNING.md  RELEASE.md  TEST_PLAN.md  UPDATES.md
scripts/: _python.ps1  build.ps1  clean.ps1  dev.ps1  hash.ps1  install_deps.ps1  installer.ps1  prepare_release.ps1  secret_scan.ps1  sign_windows.ps1  test.ps1
tests/: test_article_options.py  test_update_logic.py
tools/: versioning.py
